    $ svn log svn://svn.r-forge.r-project.org/svnroot/datatable

This NEWS file summarises the main changes.

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.4   **
        **                                         **
        *********************************************

NOTES

   o    Two unused C variables removed to pass warning from one CRAN
        check machine (r-devel-fedora), and -Wno-unused removed from
        Makevars to catch this in future before submitting.
        

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.3   **
        **                                         **
        *********************************************
        
NEW FEATURES

    o   data.table now over-allocates its vector of column pointer slots
        (100 by default). This allows := to add columns fully by
        reference as suggested by Muhammad Waliji, #1646. When the 100
        slots are used up, more space is automatically allocated.
        
        Over allocation has negligible overhead. It's just the vector
        of column pointers, not the columns themselves.
        
    o   New function alloc.col() pre-allocates column slots. Use
        this before a loop to add many more than 100 columns, for example,
        to avoid the warning as data.table grows its column pointer vector
        every additional 100 columns; e.g.,
            alloc.col(DT,10000)  # reserve 10,000 column slots
        
    o   New function truelength() returns the number of column pointer
        slots allocated, always >= length().
        
    o   New option 'datatable.nomatch' allows the default for nomatch
        to be changed from NA to 0, as wished for by Branson Owen.
        
    o   cbind(DT,...) now retains DT's key, as wished for by Chris Neff